--- a/app/src/main/res/layout/activity_trivia_question.xml
+++ b/app/src/main/res/layout/activity_trivia_question.xml
@@ -19,9 +19,11 @@
         android:id="@+id/question"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="A Quick Brown fox jumped over dsafsdfdsf dfsfdsf dsff "
-        android:textSize="20sp"
         android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="Question"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintStart_toStartOf="@+id/guideline6" />
@@ -56,18 +58,21 @@
 
     <TextView
         android:id="@+id/question_number_counter"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:gravity="center"
+        android:text="Question Number"
+        android:textColor="@color/white"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
         app:layout_constraintTop_toTopOf="@+id/guideline8" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
@@ -76,47 +81,61 @@
         <TextView
             android:id="@+id/option1"
             android:layout_width="match_parent"
-            android:background="@color/colorAccent"
             android:layout_height="50dp"
-            android:text="Option 1"
-            android:textSize="18sp"
             android:layout_marginVertical="15dp"
+            android:background="@drawable/trivia_option_background"
+            android:gravity="center"
             android:paddingHorizontal="20dp"
-            android:gravity="center_vertical"/>
+            android:text="Option 1"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/option2"
             android:layout_width="match_parent"
-            android:background="@color/colorAccent"
             android:layout_height="50dp"
-            android:text="Option 1"
-            android:textSize="18sp"
             android:layout_marginVertical="15dp"
+            android:background="@drawable/trivia_option_background"
+            android:gravity="center"
             android:paddingHorizontal="20dp"
-            android:gravity="center_vertical"/>
+            android:text="Option 2"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/option3"
             android:layout_width="match_parent"
-            android:background="@color/colorAccent"
             android:layout_height="50dp"
-            android:text="Option 1"
-            android:textSize="18sp"
             android:layout_marginVertical="15dp"
+            android:background="@drawable/trivia_option_background"
+            android:gravity="center"
             android:paddingHorizontal="20dp"
-            android:gravity="center_vertical"/>
+            android:text="Option 3"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/option4"
             android:layout_width="match_parent"
-            android:background="@color/colorAccent"
             android:layout_height="50dp"
-            android:text="Option 1"
-            android:textSize="18sp"
             android:layout_marginVertical="15dp"
+            android:background="@drawable/trivia_option_background"
+            android:gravity="center"
             android:paddingHorizontal="20dp"
-            android:gravity="center_vertical"/>
+            android:text="Option 4"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:theme="@style/ProgressBarTheme"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
