--- a/app/src/main/res/layout/item_fun_zone_expanded_item.xml
+++ b/app/src/main/res/layout/item_fun_zone_expanded_item.xml
@@ -2,24 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:background="@color/black"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="1dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:gravity="center">
 
         <ImageView
-            android:id="@+id/item_image"
+            android:id="@+id/object_image"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingVertical="10dp"
+        android:background="@color/white"
         android:orientation="horizontal">
 
         <TextView
